crates/test-ui/ui/msg_send_id_invalid_receiver.stderr
error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Allocated<NSObject> = unsafe { msg_send_id![obj, alloc] };
  |                                           -------------^^^--------
  |                                           |            |
  |                                           |            expected `&AnyClass`, found `&NSObject`
  |                                           arguments to this function are incorrect
  |
  = note: expected reference `&AnyClass`
             found reference `&NSObject`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<NSObject> = unsafe { msg_send_id![obj, init] };
  |                                    -------------^^^-------
  |                                    |            |
  |                                    |            expected `Option<Allocated<_>>`, found `&NSObject`
  |                                    arguments to this function are incorrect
  |
  = note:   expected enum `Option<Allocated<_>>`
          found reference `&NSObject`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<NSObject> = unsafe { msg_send_id![cls, init] };
  |                                    -------------^^^-------
  |                                    |            |
  |                                    |            expected `Option<Allocated<_>>`, found `&AnyClass`
  |                                    arguments to this function are incorrect
  |
  = note:   expected enum `Option<Allocated<_>>`
          found reference `&AnyClass`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<NSObject> = unsafe { msg_send_id![obj, init] };
  |                                    -------------^^^-------
  |                                    |            |
  |                                    |            expected `Option<Allocated<_>>`, found `Id<NSObject>`
  |                                    arguments to this function are incorrect
  |
  = note: expected enum `Option<Allocated<_>>`
           found struct `Id<NSObject>`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<NSObject> = unsafe { msg_send_id![obj, init] };
  |                                    -------------^^^-------
  |                                    |            |
  |                                    |            expected `Option<Allocated<_>>`, found `Option<Id<NSObject>>`
  |                                    arguments to this function are incorrect
  |
  = note: expected enum `Option<Allocated<_>>`
             found enum `Option<Id<NSObject>>`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Id<NSObject>: MsgSend` is not satisfied
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<NSObject> = unsafe { msg_send_id![obj, new] };
   |                                    -------------^^^------
   |                                    |            |
   |                                    |            the trait `MsgSend` is not implemented for `Id<NSObject>`
   |                                    required by a bound introduced by this call
   |
   = note: required for `Id<NSObject>` to implement `MsgSend`
   = note: required for `RetainSemantics<1>` to implement `MsgSendId<Id<NSObject>, Id<_>>`
help: consider borrowing here
   |
19 |     let _: Id<NSObject> = unsafe { msg_send_id![&obj, new] };
   |                                                 +

error[E0277]: the trait bound `Id<NSObject>: MsgSend` is not satisfied
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<NSObject> = unsafe { msg_send_id![obj, copy] };
   |                                    -------------^^^-------
   |                                    |            |
   |                                    |            the trait `MsgSend` is not implemented for `Id<NSObject>`
   |                                    required by a bound introduced by this call
   |
   = note: required for `Id<NSObject>` to implement `MsgSend`
   = note: required for `RetainSemantics<4>` to implement `MsgSendId<Id<NSObject>, Id<_>>`
help: consider borrowing here
   |
21 |     let _: Id<NSObject> = unsafe { msg_send_id![&obj, copy] };
   |                                                 +
